[package]
name = "link_verifier"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "4", features = ["derive"]}
regex = "1.9.4"
reqwest = { version = "0.11.20", features = ["blocking"] }
url = "2.4.0"
colored = "2.0.4"
tokio = { version = "1.13.0", features = ["full"] }
futures = "0.3.19"
pulldown-cmark = "0.8"
skim = "0.9"
strsim = "0.10"